@@ -1261,9 +1261,31 @@ void wxVLogMessage(const char* formatString, va_list argPtr);
 /** @addtogroup group_funcmacro_log */
 //@{
 /**
-    For verbose output. Normally, it is suppressed, but might be activated if
-    the user wishes to know more details about the program progress (another,
-    but possibly confusing name for the same function could be @c wxLogInfo).
+    For low priority messages.
+
+    They are handled in the same way as messages logged by wxLogMessage() by
+    the default logger but could be handled differently by the custom loggers.
+
+    @header{wx/log.h}
+*/
+void wxLogInfo(const char* formatString, ... );
+void wxVLogInfo(const char* formatString, va_list argPtr);
+//@}
+
+/** @addtogroup group_funcmacro_log */
+//@{
+/**
+    For verbose output.
+
+    Messages generated by these functions are suppressed by default, even if
+    the log level is higher than ::wxLOG_Info and need to be explicitly
+    activated by calling wxLog::SetVerbose().
+
+    Notice that this is done automatically by wxWidgets, unless the standard
+    command line handling is overridden, if @c --verbose option is specified on
+    the program command line, so using these functions provides a simple way of
+    having some diagnostic messages not shown by default but which can be
+    easily shown by the user if needed.
 
     @header{wx/log.h}
 */
